Fix: z-Index for canvas

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
+  position: relative;
   background-color: #e9e6cdde;
 }
